CarModelSmokeMeter, CarPostDataSmokeMeter. CarModel was removed.

--- a/SmartEcoA/ClientApp/src/app/administration/administration.component.html
+++ b/SmartEcoA/ClientApp/src/app/administration/administration.component.html
@@ -25,8 +25,8 @@
     <a i18n-matTooltip="@@Posts" class="btn" [routerLink]="['/posts']" matTooltip="Monitoring Posts">
       <span i18n="@@Posts">Monitoring Posts</span>
     </a>
-    <a i18n-matTooltip="@@PostDatas" class="btn" [routerLink]="['/postdatas']" matTooltip="Post Data">
-      <span i18n="@@PostDatas">Post Data</span>
+    <a i18n-matTooltip="@@PostDatas" class="btn" [routerLink]="['/postdatas']" matTooltip="Posts Data">
+      <span i18n="@@PostDatas">Posts Data</span>
     </a>
     <a i18n-matTooltip="@@PostDataDivideds" class="btn" [routerLink]="['/postdatadivideds']" matTooltip="Post Data Divided">
       <span i18n="@@PostDataDivideds">Post Data Divided</span>
@@ -36,8 +36,11 @@
     <a i18n-matTooltip="@@CarPosts" class="btn" [routerLink]="['/carposts']" matTooltip="Car Posts">
       <span i18n="@@CarPosts">Car Posts</span>
     </a>
-    <a i18n-matTooltip="@@CarModels" class="btn" [routerLink]="['/carmodels']" matTooltip="Car Models">
-      <span i18n="@@CarModels">Car Models</span>
+    <a i18n-matTooltip="@@CarModelSmokeMeters" class="btn" [routerLink]="['/carmodelsmokemeters']" matTooltip="Car Models (Smoke Meter)">
+      <span i18n="@@CarModelSmokeMeters">Car Models (Smoke Meter)</span>
+    </a>
+    <a i18n-matTooltip="@@CarPostDataSmokeMeters" class="btn" [routerLink]="['/carpostdatasmokemeters']" matTooltip="Car Posts Data (Smoke Meter)">
+      <span i18n="@@CarPostDataSmokeMeters">Car Posts Data (Smoke Meter)</span>
     </a>
   </mat-tab>
 </mat-tab-group>
