--- a/SmartEcoA/ClientApp/src/app/carmodelsmokemeters/list.component.html
+++ b/SmartEcoA/ClientApp/src/app/carmodelsmokemeters/list.component.html
@@ -1,4 +1,4 @@
-<a i18n-matTooltip="@@Create" class="btn" [routerLink]="['/carmodels/create']" matTooltip="Create"><i class="material-icons">add</i></a>
+<a i18n-matTooltip="@@Create" class="btn" [routerLink]="['/carmodelsmokemeters/create']" matTooltip="Create"><i class="material-icons">add</i></a>
 
 <mat-form-field>
   <input i18n-placeholder="@@Filter" matInput type="text" (keyup)="filter($event.target.value)" placeholder="Filter">
@@ -19,8 +19,8 @@
     <ng-container matColumnDef="details-edit-delete">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let item">
-        <a i18n-matTooltip="@@Details" class="btn" [routerLink]="['/carmodels', item.Id]" matTooltip="Details"><i class="material-icons">info</i></a>
-        <a i18n-matTooltip="@@Edit" class="btn" [routerLink]="['/carmodels/edit', item.Id]" matTooltip="Edit"><i class="material-icons">edit</i></a>
+        <a i18n-matTooltip="@@Details" class="btn" [routerLink]="['/carmodelsmokemeters', item.Id]" matTooltip="Details"><i class="material-icons">info</i></a>
+        <a i18n-matTooltip="@@Edit" class="btn" [routerLink]="['/carmodelsmokemeters/edit', item.Id]" matTooltip="Edit"><i class="material-icons">edit</i></a>
         <a i18n-matTooltip="@@Delete" class="btn" matTooltip="Delete" (click)="delete(item.Id)"><i class="material-icons">delete</i></a>
       </td>
     </ng-container>
