--- a/SmartEcoA/ClientApp/src/app/administration/administration.component.html
+++ b/SmartEcoA/ClientApp/src/app/administration/administration.component.html
@@ -31,6 +31,9 @@
     <a i18n-matTooltip="@@PostDataDivideds" class="btn" [routerLink]="['/postdatadivideds']" matTooltip="Post Data Divided">
       <span i18n="@@PostDataDivideds">Post Data Divided</span>
     </a>
+    <a i18n-matTooltip="@@PostDataAvgs" class="btn" [routerLink]="['/postdataavgs']" matTooltip="Post Data Averaged">
+      <span i18n="@@PostDataAvgs">Post Data Averaged</span>
+    </a>
   </mat-tab>
   <mat-tab i18n-label="@@CarPosts" label="Car Posts">
     <a i18n-matTooltip="@@CarPosts" class="btn" [routerLink]="['/carposts']" matTooltip="Car Posts">
