--- a/SmartEcoA/ClientApp/src/app/administration/administration.component.html
+++ b/SmartEcoA/ClientApp/src/app/administration/administration.component.html
@@ -45,5 +45,8 @@
     <a i18n-matTooltip="@@CarPostDataSmokeMeters" class="btn" [routerLink]="['/carpostdatasmokemeters']" matTooltip="Car Posts Data (Smoke Meter)">
       <span i18n="@@CarPostDataSmokeMeters">Car Posts Data (Smoke Meter)</span>
     </a>
+    <a i18n-matTooltip="@@CarModelAutoTests" class="btn" [routerLink]="['/carmodelautotests']" matTooltip="Car Models (Auto Test)">
+      <span i18n="@@CarModelAutoTests">Car Models (Auto Test)</span>
+    </a>
   </mat-tab>
 </mat-tab-group>
