--- a/SmartEcoA/ClientApp/src/app/carmodelsmokemeters/edit.component.html
+++ b/SmartEcoA/ClientApp/src/app/carmodelsmokemeters/edit.component.html
@@ -22,7 +22,7 @@
       </mat-form-field>
       <br />
       <mat-expansion-panel>
-        <mat-expansion-panel-header>
+        <mat-expansion-panel-header [collapsedHeight]="''" [expandedHeight]="''">
           <mat-panel-title>
             <span i18n="@@ApprovalMark">Has an approval mark</span>
           </mat-panel-title>
