--- a/SmartEcoA/ClientApp/src/app/administration/administration.component.html
+++ b/SmartEcoA/ClientApp/src/app/administration/administration.component.html
@@ -48,5 +48,8 @@
     <a i18n-matTooltip="@@CarModelAutoTests" class="btn" [routerLink]="['/carmodelautotests']" matTooltip="Car Models (Auto Test)">
       <span i18n="@@CarModelAutoTests">Car Models (Auto Test)</span>
     </a>
+    <a i18n-matTooltip="@@CarPostDataAutoTests" class="btn" [routerLink]="['/carpostdataautotests']" matTooltip="Car Posts Data (Auto Test)">
+      <span i18n="@@CarPostDataAutoTests">Car Posts Data (Auto Test)</span>
+    </a>
   </mat-tab>
 </mat-tab-group>
