--- a/SmartEcoA/ClientApp/src/app/administration/administration.component.html
+++ b/SmartEcoA/ClientApp/src/app/administration/administration.component.html
@@ -51,5 +51,8 @@
     <a i18n-matTooltip="@@CarPostDataAutoTests" class="btn" [routerLink]="['/carpostdataautotests']" matTooltip="Car Posts Data (Auto Test)">
       <span i18n="@@CarPostDataAutoTests">Car Posts Data (Auto Test)</span>
     </a>
+    <a i18n-matTooltip="@@CarPostAnalytics" class="btn" [routerLink]="['/carpostanalytics']" matTooltip="Car Post Analytics">
+      <span i18n="@@CarPostAnalytics">Car Post Analytics</span>
+    </a>
   </mat-tab>
 </mat-tab-group>
