--- a/SmartEcoA/ClientApp/src/app/carpostdataautotests/edit.component.html
+++ b/SmartEcoA/ClientApp/src/app/carpostdataautotests/edit.component.html
@@ -44,87 +44,87 @@
       </mat-form-field>
       <br />
       <mat-form-field>
-        <input i18n-placeholder="@@MIN_TAH" matInput type="text" placeholder="Frequency at minimum speed, 1/min" formControlName="MIN_TAH" id="min_tah">
+        <input i18n-placeholder="@@MIN_TAH" matInput type="number" placeholder="Frequency at minimum speed, 1/min" formControlName="MIN_TAH" id="min_tah">
       </mat-form-field>
       <br />
       <mat-form-field>
-        <input i18n-placeholder="@@MIN_CO" matInput type="text" placeholder="CO at minimum speed, %" formControlName="MIN_CO" id="min_co">
+        <input i18n-placeholder="@@MIN_CO" matInput type="number" placeholder="CO at minimum speed, %" formControlName="MIN_CO" id="min_co">
       </mat-form-field>
       <br />
       <mat-form-field>
-        <input i18n-placeholder="@@MIN_CH" matInput type="text" placeholder="CH at minimum speed, ppm" formControlName="MIN_CH" id="min_ch">
+        <input i18n-placeholder="@@MIN_CH" matInput type="number" placeholder="CH at minimum speed, ppm" formControlName="MIN_CH" id="min_ch">
       </mat-form-field>
       <br />
       <mat-form-field>
-        <input i18n-placeholder="@@MIN_CO2" matInput type="text" placeholder="CO2 at minimum speed, %" formControlName="MIN_CO2" id="min_co2">
+        <input i18n-placeholder="@@MIN_CO2" matInput type="number" placeholder="CO2 at minimum speed, %" formControlName="MIN_CO2" id="min_co2">
       </mat-form-field>
       <br />
       <mat-form-field>
-        <input i18n-placeholder="@@MIN_O2" matInput type="text" placeholder="O2 at minimum speed, %" formControlName="MIN_O2" id="min_o2">
+        <input i18n-placeholder="@@MIN_O2" matInput type="number" placeholder="O2 at minimum speed, %" formControlName="MIN_O2" id="min_o2">
       </mat-form-field>
       <br />
       <mat-form-field>
-        <input i18n-placeholder="@@MIN_L" matInput type="text" placeholder="λ at minimum speed, %" formControlName="MIN_L" id="min_l">
+        <input i18n-placeholder="@@MIN_L" matInput type="number" placeholder="λ at minimum speed, %" formControlName="MIN_L" id="min_l">
       </mat-form-field>
       <br />
       <mat-form-field>
-        <input i18n-placeholder="@@MAX_TAH" matInput type="text" placeholder="Frequency at high speed, 1/min" formControlName="MAX_TAH" id="max_tah">
+        <input i18n-placeholder="@@MAX_TAH" matInput type="number" placeholder="Frequency at high speed, 1/min" formControlName="MAX_TAH" id="max_tah">
       </mat-form-field>
       <br />
       <mat-form-field>
-        <input i18n-placeholder="@@MAX_CO" matInput type="text" placeholder="CO at increased speed, %" formControlName="MAX_CO" id="max_co">
+        <input i18n-placeholder="@@MAX_CO" matInput type="number" placeholder="CO at increased speed, %" formControlName="MAX_CO" id="max_co">
       </mat-form-field>
       <br />
       <mat-form-field>
-        <input i18n-placeholder="@@MAX_CH" matInput type="text" placeholder="CH at high speed, ppm" formControlName="MAX_CH" id="max_ch">
+        <input i18n-placeholder="@@MAX_CH" matInput type="number" placeholder="CH at high speed, ppm" formControlName="MAX_CH" id="max_ch">
       </mat-form-field>
       <br />
       <mat-form-field>
-        <input i18n-placeholder="@@MAX_CO2" matInput type="text" placeholder="CO2 at increased speed, %" formControlName="MAX_CO2" id="max_co2">
+        <input i18n-placeholder="@@MAX_CO2" matInput type="number" placeholder="CO2 at increased speed, %" formControlName="MAX_CO2" id="max_co2">
       </mat-form-field>
       <br />
       <mat-form-field>
-        <input i18n-placeholder="@@MAX_O2" matInput type="text" placeholder="O2 at increased speed, %" formControlName="MAX_O2" id="max_o2">
+        <input i18n-placeholder="@@MAX_O2" matInput type="number" placeholder="O2 at increased speed, %" formControlName="MAX_O2" id="max_o2">
       </mat-form-field>
       <br />
       <mat-form-field>
-        <input i18n-placeholder="@@MAX_L" matInput type="text" placeholder="λ at increased speed, %" formControlName="MAX_L" id="max_l">
+        <input i18n-placeholder="@@MAX_L" matInput type="number" placeholder="λ at increased speed, %" formControlName="MAX_L" id="max_l">
       </mat-form-field>
       <br />
       <mat-form-field>
-        <input i18n-placeholder="@@ZAV_NOMER" matInput type="text" placeholder="Measurement number" formControlName="ZAV_NOMER" id="zav_nomer">
+        <input i18n-placeholder="@@ZAV_NOMER" matInput type="number" placeholder="Measurement number" formControlName="ZAV_NOMER" id="zav_nomer">
       </mat-form-field>
       <br />
       <mat-form-field>
-        <input i18n-placeholder="@@K_1" matInput type="text" placeholder="Attenuation index of luminous flux K No. 1, 1/m" formControlName="K_1" id="k_1">
+        <input i18n-placeholder="@@K_1" matInput type="number" placeholder="Attenuation index of luminous flux K No. 1, 1/m" formControlName="K_1" id="k_1">
       </mat-form-field>
       <br />
       <mat-form-field>
-        <input i18n-placeholder="@@K_2" matInput type="text" placeholder="Attenuation index of luminous flux K No. 2, 1/m" formControlName="K_2" id="k_2">
+        <input i18n-placeholder="@@K_2" matInput type="number" placeholder="Attenuation index of luminous flux K No. 2, 1/m" formControlName="K_2" id="k_2">
       </mat-form-field>
       <br />
       <mat-form-field>
-        <input i18n-placeholder="@@K_3" matInput type="text" placeholder="Attenuation index of luminous flux K No. 3, 1/m" formControlName="K_3" id="k_3">
+        <input i18n-placeholder="@@K_3" matInput type="number" placeholder="Attenuation index of luminous flux K No. 3, 1/m" formControlName="K_3" id="k_3">
       </mat-form-field>
       <br />
       <mat-form-field>
-        <input i18n-placeholder="@@K_4" matInput type="text" placeholder="Attenuation index of luminous flux K No. 4, 1/m" formControlName="K_4" id="k_4">
+        <input i18n-placeholder="@@K_4" matInput type="number" placeholder="Attenuation index of luminous flux K No. 4, 1/m" formControlName="K_4" id="k_4">
       </mat-form-field>
       <br />
       <mat-form-field>
-        <input i18n-placeholder="@@K_SVOB" matInput type="text" placeholder="Attenuation index of luminous flux K at free acceleration, 1/m" formControlName="K_SVOB" id="k_svob">
+        <input i18n-placeholder="@@K_SVOB" matInput type="number" placeholder="Attenuation index of luminous flux K at free acceleration, 1/m" formControlName="K_SVOB" id="k_svob">
       </mat-form-field>
       <br />
       <mat-form-field>
-        <input i18n-placeholder="@@K_MAX" matInput type="text" placeholder="Luminous flux attenuation index K at maximum rotation frequency, 1/m" formControlName="K_MAX" id="k_max">
+        <input i18n-placeholder="@@K_MAX" matInput type="number" placeholder="Luminous flux attenuation index K at maximum rotation frequency, 1/m" formControlName="K_MAX" id="k_max">
       </mat-form-field>
       <br />
       <mat-form-field>
-        <input i18n-placeholder="@@MIN_NO" matInput type="text" placeholder="NO at minimum speed" formControlName="MIN_NO" id="min_no">
+        <input i18n-placeholder="@@MIN_NO" matInput type="number" placeholder="NO at minimum speed" formControlName="MIN_NO" id="min_no">
       </mat-form-field>
       <br />
       <mat-form-field>
-        <input i18n-placeholder="@@MAX_NO" matInput type="text" placeholder="NO at high rpm" formControlName="MAX_NO" id="max_no">
+        <input i18n-placeholder="@@MAX_NO" matInput type="number" placeholder="NO at high rpm" formControlName="MAX_NO" id="max_no">
       </mat-form-field>
       <br />
     </mat-card-content>
