--- a/SmartEcoA/ClientApp/src/app/dashboard/dashboard.component.css
+++ b/SmartEcoA/ClientApp/src/app/dashboard/dashboard.component.css
@@ -24,3 +24,22 @@
   height: 467px;
   min-width: 300px;
 }
+
+.not-first {
+    padding-left: 15px;
+}
+
+.custom-scroll-bar{
+    padding-top: 10px;
+    height:60vh;
+    overflow-y:scroll;
+    overflow-x: hidden;
+}
+
+.custom-scroll-bar::-webkit-scrollbar{
+    width: 5px;
+}
+
+.custom-scroll-bar::-webkit-scrollbar-thumb{
+    background: rgba(0,0,0,.26);
+}
