--- a/SmartEcoA/ClientApp/src/app/dashboard/dashboard.component.css
+++ b/SmartEcoA/ClientApp/src/app/dashboard/dashboard.component.css
@@ -43,3 +43,7 @@
 .custom-scroll-bar::-webkit-scrollbar-thumb{
     background: rgba(0,0,0,.26);
 }
+
+button:not(:first-child) {
+  margin: 0px 0px 0px 8px;
+}
