--- a/SmartEcoA/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/SmartEcoA/ClientApp/src/app/dashboard/dashboard.component.html
@@ -83,39 +83,39 @@
           </mat-card>
         </mat-grid-tile>-->
 
-        <mat-grid-tile [colspan]="5" [rowspan]="10">
-          <mat-card class="dashboard-card" style="overflow: auto;">
-            <button mat-raised-button (click)="exporter.exportTable('xlsx', {fileName:'CarPostsReport', sheet: 'sheet_name', Props: {Author: 'SmartEco'}})">Excel</button>
-            <button mat-raised-button printSectionId="print-section" ngxPrint>Print</button>
-            <div id="print-section">
-              <table mat-table matTableExporter [dataSource]="dataCarPosts" matSort #exporter="matTableExporter" class="table">
-                <tr>
-                  <ng-container matColumnDef="CarPostName">
-                    <th i18n="@@CarPost" mat-header-cell *matHeaderCellDef mat-sort-header>Car Post</th>
-                    <td mat-cell *matCellDef="let item">{{item.CarPostName}}</td>
-                  </ng-container>
+      <mat-grid-tile [colspan]="5" [rowspan]="10">
+        <mat-card class="dashboard-card" style="overflow: auto;">
+          <button mat-raised-button type="button" color="primary" (click)="exporter.exportTable('xlsx', {fileName:'CarPostsReport', sheet: 'sheet_name', Props: {Author: 'SmartEco'}})">Excel</button>
+          <button mat-raised-button type="button" color="primary" printSectionId="print-section" ngxPrint>Print</button>
+          <div id="print-section">
+            <table mat-table matTableExporter [dataSource]="dataCarPosts" matSort #exporter="matTableExporter" class="table">
+              <tr>
+                <ng-container matColumnDef="CarPostName">
+                  <th i18n="@@CarPost" mat-header-cell *matHeaderCellDef mat-sort-header>Car Post</th>
+                  <td mat-cell *matCellDef="let item">{{item.CarPostName}}</td>
+                </ng-container>
 
-                  <ng-container matColumnDef="EngineFuel">
-                    <th i18n="@@EngineFuel" mat-header-cell *matHeaderCellDef mat-sort-header>Engine Fuel</th>
-                    <td mat-cell *matCellDef="let item">{{item.EngineFuel}}</td>
-                  </ng-container>
+                <ng-container matColumnDef="EngineFuel">
+                  <th i18n="@@EngineFuel" mat-header-cell *matHeaderCellDef mat-sort-header>Engine Fuel</th>
+                  <td mat-cell *matCellDef="let item">{{item.EngineFuel}}</td>
+                </ng-container>
 
-                  <ng-container matColumnDef="AmountMeasurements">
-                    <th i18n="@@AmountMeasurements" mat-header-cell *matHeaderCellDef mat-sort-header>Amount Measurements</th>
-                    <td mat-cell *matCellDef="let item" class="pl-5">{{item.AmountMeasurements}}</td>
-                  </ng-container>
+                <ng-container matColumnDef="AmountMeasurements">
+                  <th i18n="@@AmountMeasurements" mat-header-cell *matHeaderCellDef mat-sort-header>Amount Measurements</th>
+                  <td mat-cell *matCellDef="let item" class="pl-5">{{item.AmountMeasurements}}</td>
+                </ng-container>
 
-                  <ng-container matColumnDef="AmountExceedances">
-                    <th i18n="@@AmountExceedances" mat-header-cell *matHeaderCellDef mat-sort-header>Amount Exceedances</th>
-                    <td mat-cell *matCellDef="let item" class="pl-5">{{item.AmountExceedances}}</td>
-                  </ng-container>
-                </tr>
-                <tr mat-header-row *matHeaderRowDef="columns"></tr>
-                <tr mat-row *matRowDef="let row; columns: columns;"></tr>
-              </table>
-            </div>
-          </mat-card>
-        </mat-grid-tile>
+                <ng-container matColumnDef="AmountExceedances">
+                  <th i18n="@@AmountExceedances" mat-header-cell *matHeaderCellDef mat-sort-header>Amount Exceedances</th>
+                  <td mat-cell *matCellDef="let item" class="pl-5">{{item.AmountExceedances}}</td>
+                </ng-container>
+              </tr>
+              <tr mat-header-row *matHeaderRowDef="columns"></tr>
+              <tr mat-row *matRowDef="let row; columns: columns;"></tr>
+            </table>
+          </div>
+        </mat-card>
+      </mat-grid-tile>
 
       </mat-grid-list>
     </div>
