--- a/SmartEcoA/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/SmartEcoA/ClientApp/src/app/dashboard/dashboard.component.html
@@ -86,7 +86,7 @@
       <mat-grid-tile [colspan]="5" [rowspan]="10">
         <mat-card class="dashboard-card" style="overflow: auto;">
           <button mat-raised-button type="button" color="primary" (click)="exporter.exportTable('xlsx', {fileName:'CarPostsReport', sheet: 'sheet_name', Props: {Author: 'SmartEco'}})">Excel</button>
-          <button mat-raised-button type="button" color="primary" printSectionId="print-section" ngxPrint>Print</button>
+          <button i18n="@@Print" mat-raised-button type="button" color="primary" printSectionId="print-section" ngxPrint>Print</button>
           <div id="print-section">
             <table mat-table matTableExporter [dataSource]="dataCarPosts" matSort #exporter="matTableExporter" class="table">
               <tr>
