--- a/SmartEcoA/ClientApp/src/app/carpostdataautotests/create.component.html
+++ b/SmartEcoA/ClientApp/src/app/carpostdataautotests/create.component.html
@@ -36,6 +36,10 @@
       </mat-form-field>
       <br />
       <mat-form-field>
+        <input i18n-placeholder="@@Version" matInput type="number" placeholder="AutoTest application version" formControlName="Version" id="version">
+      </mat-form-field>
+      <br />
+      <mat-form-field>
         <input i18n-placeholder="@@DOPOL1" matInput type="text" placeholder="Additional field 1" formControlName="DOPOL1" id="dopol1">
       </mat-form-field>
       <br />
@@ -125,6 +129,18 @@
       <br />
       <mat-form-field>
         <input i18n-placeholder="@@MAX_NO" matInput type="number" placeholder="NO at high rpm" formControlName="MAX_NO" id="max_no">
+      </mat-form-field>
+      <br />
+      <mat-form-field>
+        <input i18n-placeholder="@@ATNUM" matInput type="number" placeholder="ATNUM" formControlName="ATNUM" id="atnum">
+      </mat-form-field>
+      <br />
+      <mat-form-field>
+        <input i18n-placeholder="@@MIN_NOx" matInput type="number" placeholder="NOx at minimum speed" formControlName="MIN_NOx" id="min_nox">
+      </mat-form-field>
+      <br />
+      <mat-form-field>
+        <input i18n-placeholder="@@MAX_NOx" matInput type="number" placeholder="NOx at high rpm" formControlName="MAX_NOx" id="max_nox">
       </mat-form-field>
       <br />
     </mat-card-content>
