--- a/SmartEcoA/ClientApp/src/app/carpostdataautotests/details.component.html
+++ b/SmartEcoA/ClientApp/src/app/carpostdataautotests/details.component.html
@@ -10,6 +10,8 @@
       <dd>{{carpostdataautotest?.CarModelAutoTest?.Name}}</dd>
       <dt i18n="@@Number">Number</dt>
       <dd>{{carpostdataautotest?.Number}}</dd>
+      <dt i18n="@@Version">Version</dt>
+      <dd>{{carpostdataautotest?.Version}}</dd>
       <dt i18n="@@DOPOL1">DOPOL1</dt>
       <dd>{{carpostdataautotest?.DOPOL1}}</dd>
       <dt i18n="@@DOPOL2">DOPOL2</dt>
@@ -56,6 +58,12 @@
       <dd>{{carpostdataautotest?.MIN_NO}}</dd>
       <dt i18n="@@MAX_NO">MAX_NO</dt>
       <dd>{{carpostdataautotest?.MAX_NO}}</dd>
+      <dt i18n="@@ATNUM">ATNUM</dt>
+      <dd>{{carpostdataautotest?.ATNUM}}</dd>
+      <dt i18n="@@MIN_NOx">MIN_NOx</dt>
+      <dd>{{carpostdataautotest?.MIN_NOx}}</dd>
+      <dt i18n="@@MAX_NOx">MAX_NOx</dt>
+      <dd>{{carpostdataautotest?.MAX_NOx}}</dd>
     </dl>
   </mat-card-content>
   <mat-card-actions align="center">
